--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.25.0"
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
