--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
       "endOfLine":"auto"
     }],
     "linebreak-style": [0, "unix"],
-    "quotes": ["error", "single"],
+    "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": 0,
