--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint",
+    "lint": "eslint ./src",
     "lint:fix": "eslint --fix",
     "format": "prettier --write .",
     "prepare": "husky install"
